--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser": "^18.2.0",
     "@angular/platform-browser-dynamic": "^18.2.0",
     "@angular/router": "^18.2.0",
+    "angular-ng-autocomplete": "^2.0.12",
     "bootstrap": "^5.3.3",
     "crypto-js": "^4.2.0",
     "rxjs": "~7.8.0",
